Quickfix moved LanguageModule to logic folder, should fix the not found issue. Changed some css, js

--- a/Fitasia/Fitasia.csproj
+++ b/Fitasia/Fitasia.csproj
@@ -366,7 +366,7 @@
     <Compile Include="logic\FormBase.cs">
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="App_Code\LanguageModule.cs" />
+    <Compile Include="logic\LanguageModule.cs" />
     <Compile Include="Master.Master.cs">
       <DependentUpon>Master.Master</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -405,6 +405,7 @@
     <Content Include="App_LocalResources\Home.aspx.resx" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="App_Code\" />
     <Folder Include="App_Start\" />
   </ItemGroup>
   <ItemGroup>
